# fantasy-motogp-explorer

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
fantasy_motogp_explorer/: Welcome.py  fantasy.py  urls.py
fantasy_motogp_explorer/common/: resources.py
fantasy_motogp_explorer/data_models/: common.py  constructors.py  riders.py  teams.py  weekends.py
fantasy_motogp_explorer/pages/: 1_🚴_Riders.py  1_🚴‍_Riders.py  2_🏍️_Constructors.py  3_🛠️_Teams.py  4_🗓️_Weekends.py
fantasy_motogp_helper/: Welcome.py  urls.py
fantasy_motogp_helper/data_models/: riders.py
fantasy_motogp_helper/pages/: 2_🏍️_Constructors.py  3_🛠️_Teams.py  4_🗓️_Weekends.py
