[tool.poetry]
name = "fantasy-motogp-helper"
version = "0.1.0"
description = "Tools to explore Fantasy MotoGP data"
license = "Apache-2.0"
authors = [
    "AJ Cloete <ajcloete@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/aj-cloete/fantasy-motogp-helper"

[tool.poetry.dependencies]
python = "^3.12.2"
pandas = "^2.2.1"
pendulum = "^3.0.0"
requests = "^2.31.0"
streamlit = "^1.32.2"
streamlit-aggrid = "^1.0.0"
streamlit-extras = "^0.4.0"
validators = "^0.24.0"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
pre-commit = "^3.7.0"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
